{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 615,
  "lineage": "62170758-16dd-fbdc-5ff0-a1cc3d009125",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-03fd132e8fe030b0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03fd132e8fe030b0b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-02819715c172bd6f9",
            "private_dns": "ip-10-0-53-182.us-east-2.compute.internal",
            "private_ip": "10.0.53.182",
            "public_dns": "ec2-18-191-234-221.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.234.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f4bde74f3a01abac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ace3437c24fd2bc7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d444c88aa7cbee",
            "tags": {
              "Name": "artifactory"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ace3437c24fd2bc7"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ci",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-081f4ae39735f8d05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-081f4ae39735f8d05",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-085cd76d05241a661",
            "private_dns": "ip-10-0-52-78.us-east-2.compute.internal",
            "private_ip": "10.0.52.78",
            "public_dns": "ec2-18-191-210-121.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.210.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00ed767c87f3569ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ace3437c24fd2bc7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d444c88aa7cbee",
            "tags": {
              "Name": "ci"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ace3437c24fd2bc7"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devtools",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-053cb46040dc00597",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-053cb46040dc00597",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-01857fc009cd35fd3",
            "private_dns": "ip-10-0-51-228.us-east-2.compute.internal",
            "private_ip": "10.0.51.228",
            "public_dns": "ec2-18-191-178-50.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.178.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-037c13b7ef0ad236a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ace3437c24fd2bc7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d444c88aa7cbee",
            "tags": {
              "Name": "devtools"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ace3437c24fd2bc7"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "qa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-06620fd745ef2ab6b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06620fd745ef2ab6b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0decb361daa75f669",
            "private_dns": "ip-10-0-54-214.us-east-2.compute.internal",
            "private_ip": "10.0.54.214",
            "public_dns": "ec2-13-59-164-17.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.164.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ccc474527bb76a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ace3437c24fd2bc7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d444c88aa7cbee",
            "tags": {
              "Name": "qa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ace3437c24fd2bc7"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-env-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a6044c9983defde7",
            "owner_id": "945174976979",
            "vpc_id": "vpc-02132c6f3c8f0a984"
          },
          "depends_on": [
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-dev-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03dc4b819e02ae3b8",
            "owner_id": "945174976979",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6044c9983defde7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-02132c6f3c8f0a984"
          },
          "depends_on": [
            "aws_internet_gateway.dev-env-gw",
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05627d4ad467e5cd3",
            "route_table_id": "rtb-03dc4b819e02ae3b8",
            "subnet_id": "subnet-0a8d444c88aa7cbee"
          },
          "depends_on": [
            "aws_route_table.route-table-dev-env",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945174976979:security-group/sg-0ace3437c24fd2bc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ace3437c24fd2bc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": null,
            "owner_id": "945174976979",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02132c6f3c8f0a984"
          },
          "depends_on": [
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945174976979:subnet/subnet-0a8d444c88aa7cbee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0a8d444c88aa7cbee",
            "map_public_ip_on_launch": true,
            "owner_id": "945174976979",
            "vpc_id": "vpc-02132c6f3c8f0a984"
          },
          "depends_on": [
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945174976979:vpc/vpc-02132c6f3c8f0a984",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c3204df3bb7d58b",
            "default_route_table_id": "rtb-0094e3d41d0e068a8",
            "default_security_group_id": "sg-074fa0cd6c6088398",
            "dhcp_options_id": "dopt-0e6b9965",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02132c6f3c8f0a984",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0094e3d41d0e068a8",
            "owner_id": "945174976979"
          }
        }
      ]
    }
  ]
}